Add Full Pegging and Exception Management
